# sol.arena-buenos-aires

./: .gitignore  README.md
contracts/: Anchor.toml  Cargo.toml  package-lock.json  package.json
contracts/programs/duel_crowd_bets/: Cargo.toml
contracts/programs/duel_crowd_bets/src/: errors.rs  lib.rs  state.rs
contracts/programs/duel_crowd_bets/src/instructions/: a .rs  claim_support.rs  create_bet.rs  declare_winner.rs  deposit_participant.rs  mod.rs  support_bet.rs  withdraw_spread.rs
contracts/scripts/: create_bet.js
contracts/tests/: duel_crowd_bets.ts
doc/: API.md  ARCHITECTURE.md  BUILD_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  FINAL_SOLUTION.md  FIX_ISSUES.md  INDEX.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  setup-complete.sh
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/public/idl/: duel_crowd_bets.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/bet/[id]/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/me/: page.tsx
frontend/src/components/: BetCard.tsx  Breadcrumbs.tsx  LogoBar.tsx  Navbar.tsx  WalletCorner.tsx  WalletProvider.tsx
frontend/src/lib/: anchorClient.ts  betLocalMeta.ts  debug.ts  useWalletConnection.ts
frontend/src/lib/types/: duel_crowd_bets.ts
scripts/: deploy.sh
